# omicsdm_v2

./: .gitignore  README.md  projects.json
client/: .dockerignore  Dockerfile  Dockerfile_from_build  Jenkinsfile  README.md  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  schema.json  svelte.config.js  tailwind.config.ts  vite.config.ts
client/src/: app.css  app.html  auth.ts  config.ts
client/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
client/src/client/@tanstack/: svelte-query.gen.ts
client/src/lib/: Login.svelte  Nav.svelte  ViewProjects.svelte  config.ts  validate.ts
client/src/lib/form/: DatasetForm.svelte  DirectForm.svelte  FileForm.svelte  fieldsToObject.ts  (+4 more)
client/src/routes/: +layout.svelte  +layout.ts  +page.svelte  submit.ts
client/static/: config.json
server/: .dockerignore  .env  Dockerfile  Jenkinsfile  __init__.py  app.py  compose.yml  pyproject.toml  requirements.txt
server/docker/: Dockerfile.keycloak-22.0_local-certs
server/entities/: __init__.py
server/entities/controllers/: __init__.py  dataset.py  file.py  project.py
server/entities/schemas/: __init__.py  dataset.py  file.py  project.py  tag.py
server/entities/tables/: __init__.py  _file.py  _filecollection.py  _models  asso.py  dataset.py  file.py  project.py  tag.py  visualization.py
server/keycloak/: 3TR.json
server/manifests/: __init__.py  visualization.py
server/migration/: .env  README.md  migration.py  requirements.txt  reset.sql
server/scripts/: namespace.yaml  oauth2-proxy.yaml  odmv2_data_inserter.py  setup-visualization.sh
(+60 files in other folders)
